--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_bloc: ^9.0.0
   #  rxdart: ^0.28.0
   json_annotation: ^4.9.0
-
+  firestore_db_impl: ^0.0.1
   #  geoflutterfire: ^3.0.3
   #  geoflutterfire2: ^2.3.15
   geoflutterfire_plus: ^0.0.32
@@ -37,6 +37,7 @@ dependencies:
   #  easy_geofencing: ^0.2.0
   cloud_firestore: ^5.6.2
   fluttertoast: ^8.2.10
+
 
 
 dev_dependencies:
