--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   #  easy_geofencing: ^0.2.0
   cloud_firestore: ^5.6.2
   fluttertoast: ^8.2.10
-
+  provider: ^6.1.5
 
 
 dev_dependencies:
