added all packages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  exception_type: ^0.0.3
-  i_tdd: ^0.0.1
-  get_it_di_global_variable: ^0.0.4
-  navigation_wihout_context: ^0.0.1
+
+  exception_type:
+    path: ../exception_type
+  i_tdd:
+    path: ../i_tdd
+  get_it_di_global_variable:
+    path: ../get_it_di_global_variable
+  navigation_wihout_context:
+    path: ../navigation_wihout_context
 
 
   equatable: ^2.0.7
