--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: location_reader
 description: "A Flutter package for retrieving and handling location-related data, including current location, reverse geocoding, Firebase integration, location permission management, and nearby location queries."
-version: 0.0.5
+version: ^4.0.0
 homepage: https://github.com/GenieCoderSrc/location_reader
 repository: https://github.com/GenieCoderSrc/location_reader
 issue_tracker: https://github.com/GenieCoderSrc/location_reader/issues
 
 environment:
-  sdk: ^3.7.2
+  sdk: ^3.8.1
   flutter: ">=1.17.0"
 
 dependencies:
@@ -33,7 +33,7 @@ dependencies:
   equatable: ^2.0.7
   dartz: ^0.10.1
   bloc: ^9.0.0
-  flutter_bloc: ^9.0.0
+  flutter_bloc: ^9.1.1
   #  rxdart: ^0.28.0
   json_annotation: ^4.9.0
   #  geoflutterfire: ^3.0.3
@@ -41,14 +41,14 @@ dependencies:
   #  flutter_geofire: ^2.0.3
   #  geoflutterfire_updated: ^3.1.0
   #  geoflutterfire: ^3.0.0
-  geolocator: ^13.0.2
+  geolocator: ^14.0.2
   geocoding: ^3.0.0
   #  geocoding: ^2.1.1
   #  easy_geofencing: ^0.2.0
 #  cloud_firestore: ^6.0.0
-#  cloud_firestore: ^5.6.2
+#  cloud_firestore: ^6.0.0
 
-  fluttertoast: ^8.2.10
+  fluttertoast: ^8.2.12
   provider: ^6.1.5
 
 
@@ -56,8 +56,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: ^2.4.14
-  json_serializable: ^6.9.3
+  build_runner: ^2.6.0
+  json_serializable: ^6.10.0
+
+  
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
