--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 
   navigation_without_context: ^0.0.3+1
   firestore_db_impl: ^0.0.2+1
+  cloud_firestore: ^6.0.0
   geo_lat_lon: ^0.0.2
 
 #  geoflutterfire_plus: ^0.0.32
@@ -36,7 +37,7 @@ dependencies:
   #  geoflutterfire_updated: ^3.1.0
   #  geoflutterfire: ^3.0.0
   geolocator: ^14.0.2
-  geocoding: ^3.0.0
+  geocoding: ^4.0.0
   #  geocoding: ^2.1.1
   #  easy_geofencing: ^0.2.0
 #  cloud_firestore: ^6.0.0
