--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   get_it_di_global_variable: ^0.0.5
 
   navigation_without_context: ^0.0.3+1
-  firestore_db_impl: ^0.0.2+1
+  firestore_db_impl: ^0.0.3
   cloud_firestore: ^6.0.0
   geo_lat_lon: ^0.0.3
 
@@ -51,7 +51,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: ^2.6.0
+  build_runner: ^2.6.1
   json_serializable: ^6.10.0
 
   
