--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,17 @@ dependencies:
   flutter:
     sdk: flutter
 
-  exception_type: ^0.0.4
+  exception_type: ^0.0.3
   i_tdd: ^0.0.2
-  get_it_di_global_variable: ^0.0.6
+  get_it_di_global_variable: ^0.0.5
 
-  navigation_without_context: ^0.0.4
-  firestore_db_impl: ^0.0.4
+  navigation_without_context: ^0.0.3+1
+  firestore_db_impl: ^0.0.3
   cloud_firestore: ^6.0.0
   geo_lat_lon: ^0.0.3
 
-#  geoflutterfire_plus: ^0.0.32
 
+#  geoflutterfire_plus: ^0.0.32
 
   equatable: ^2.0.7
   dartz: ^0.10.1
@@ -51,8 +51,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  build_runner: ^2.6.1
-  json_serializable: ^6.10.0
+#  build_runner: ^2.6.1
+#  json_serializable: ^6.10.0
 
   
   
